<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10.5dp">

        <TextView
            android:id="@+id/subjectName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subject_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMore"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <ImageButton
            android:id="@+id/btnMore"
            android:contentDescription="@string/more_button"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:src="@drawable/baseline_more_vert_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section"
            android:textColor="#666666"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/subjectName"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textColor="#666666"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvSection"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
