<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:background="@drawable/dialog_background">

        <!-- Guideline for left margin -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <!-- Guideline for right margin -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <!-- Dialog Title -->
        <TextView
            android:id="@+id/tvCreateClassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_activity"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Subject Name Text -->
        <TextView
            android:id="@+id/tvActivityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_name"
            android:textSize="15sp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvCreateClassTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Subject Name Input -->
        <EditText
            android:id="@+id/etActivityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_background"
            android:padding="12dp"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:elevation="5dp"
            android:inputType="text"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvActivityName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Section Text -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/etActivityName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Section Input -->
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_background"
            android:padding="12dp"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:inputType="textMultiLine"
            android:elevation="5dp"
            android:gravity="start"
            android:maxLines="10"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Upload File Text -->
        <TextView
            android:id="@+id/tvUploadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_file_optional"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <!-- Upload File Button -->
        <Button
            android:id="@+id/btnUploadFile"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/baseline_file_upload_24"
            app:iconTint="@color/black"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:text="@string/choose_file"
            android:backgroundTint="@color/white"
            android:textColor="#640000"
            app:layout_constraintTop_toBottomOf="@id/tvUploadFile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- File Name Display -->
        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_file_selected"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/btnUploadFile"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical1" />

        <!-- Set Due Date Button -->
        <Button
            android:id="@+id/btnSetDueDate"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/baseline_calendar_month_24"
            app:iconTint="@color/black"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/set_due_date"
            android:textSize="9sp"
            android:backgroundTint="@color/white"
            android:textColor="#640000"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvFileName"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toStartOf="@id/etSetPoints"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <!-- Set Points Input -->
        <EditText
            android:id="@+id/etSetPoints"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:background="@drawable/rectangular_edit_text_background"
            android:padding="12dp"
            android:elevation="2dp"
            android:textSize="11sp"
            android:hint="@string/set_points"
            android:layout_marginTop="11dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvFileName"
            app:layout_constraintStart_toEndOf="@id/btnSetDueDate"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical1" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmitCreatedActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnSetDueDate"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical1"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
